added some responsiveness, changed some sizes

--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
             <h3>View at Thesis</h3>
           </div>
         </div>
-        <p class="text top">
+        <p class="text">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum officia
           ea minima accusantium nulla est numquam ut autem ipsam sapiente,
           exercitationem delectus maxime eius illo asperiores dolorem, enim
           voluptatibus! Autem?
         </p>
+        
       </div>
     </section>
 
